--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,14 @@
-attrs==20.3.0
-click==7.1.2
-coverage==5.4
 Flask==1.1.1
+Flask-Bcrypt==0.7.1
+Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.1
 Flask-Testing==0.8.1
 Flask-WTF==0.14.3
 gunicorn==20.0.4
-importlib-metadata==3.4.0
-iniconfig==1.1.1
-itsdangerous==1.1.0
 Jinja2==2.10.3
-MarkupSafe==1.1.1
-packaging==20.9
-pkg-resources==0.0.0
-pluggy==0.13.1
 PyMySQL==1.0.2
-py==1.10.0
-pyparsing==2.4.7
 pytest==6.2.2
 pytest-cov==2.11.1
 SQLAlchemy==1.3.11
-toml==0.10.2
-typing-extensions==3.7.4.3
 Werkzeug==0.16.1
-zipp==3.4.0
+WTForms==2.3.3
